add transaction page

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -84,6 +84,7 @@ $theme-colors: map-merge(
     "light": $light,
     "dark": $dark,
     "choco": $choco,
+    "teal": $teal,
   ),
   $theme-colors
 );
